# YachtClubManager

./: .env.docker  .env.docker.example  .env.example  .gitignore  DOCKER.md  Dockerfile  Makefile  README.md  docker-compose.yml  docker-entrypoint.sh  main.py  pyproject.toml  requirements.txt
YachtClubManager/: manage.py
YachtClubManager/CalendarApp/: admin.py  forms.py  models.py  urls.py  views.py
YachtClubManager/CalendarApp/migrations/: 0001_initial.py  0002_eventcontact.py  0003_eventactionlog.py  0004_add_registration_status.py  0005_add_registration_open_datetime.py  0006_add_registrant_list_visibility.py  0007_add_event_registration.py  0008_event_allowed_member_types_and_more.py  0008_upgrade_to_ckeditor5.py  0009_event_allowed_member_types_and_more.py  0010_event_linked_documents.py
YachtClubManager/CalendarApp/templatetags/: event_permissions.py
YachtClubManager/DocumentManagement/: admin.py  apps.py  forms.py  mixins.py  models.py  urls.py  utils.py  views.py
YachtClubManager/DocumentManagement/migrations/: 0001_initial.py  0002_alter_documentfile_file.py
YachtClubManager/ManagementApp/: admin.py  apps.py  forms.py  mixins.py  models.py  urls.py  views.py
YachtClubManager/ManagementApp/migrations/: 0001_initial.py  0002_alter_role_name.py  0003_clubuser_address1_clubuser_address2_clubuser_city_and_more.py  0004_rename_phone_fields.py  0005_add_vessel_fields.py  0006_add_member_types.py  0007_clubuser_parent_member_clubuser_relationship_type_and_more.py
YachtClubManager/YachtClubManager/: asgi.py  settings.py  urls.py  wsgi.py
(+50 files in other folders)
