[project]
name = "yachtclubmanager"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django>=5.2.7",
    "psycopg2-binary>=2.9.9",
    "python-dotenv>=1.0.0",
    "django-ckeditor>=6.7.0",
    "dotenv>=0.9.9",
    "pytz>=2024.1",
    "pillow>=12.0.0",
]
